--- a/crowdin.yaml
+++ b/crowdin.yaml
@@ -1,3 +1,5 @@
 files:
   - source: /README.md
     translation: /README-%two_letters_code%.md
+  - source: /doc/u*.md
+    translation: /doc/%file_name%-%two_letters_code%.%file_extension%
